fixed alignment bug with form fields and delete/copy buttons

--- a/public/modules/forms/base/css/form.css
+++ b/public/modules/forms/base/css/form.css
@@ -1,51 +1,3 @@
-/* Custom Tab CSS */
-.nav.nav-pills.nav-stacked {
-	width: 16.66666667%;
-	float: left;
-	position: relative;
-	min-height: 1px;
-	padding-right: 15px;
-}
-div.tab-content {
-	width: 83.33333333%;
-	position: relative;
-	min-height: 1px;
-	float:left;
-	padding-top: 0!important;
-}
-
-.panel-default.startPage {
-    border-style: dashed;
-    border-color: #a9a9a9;
-    border-width:3px;
-}
-
-.busy-updating-wrapper {
-   text-align: center; 
-   font-size: 20px;
-   position: fixed; 
-   bottom: 0; 
-   right: 55px;
-   z-index: 1;
-}
-
-.busy-submitting-wrapper {
-    position: fixed;
-    top: 50%;
-    left: 0;
-    right: 0;
-    bottom: 0;
-}
-
-.dropzone h4.panel-title {
-    height: 17px;
-    overflow: hidden;
-}
-
-.container.admin-form {
-    margin-top: 70px;
-}
-
 .public-form.preview {
     border: none; 
     box-shadow: 0px 0px 10px 0px grey; 
@@ -273,78 +225,6 @@ form .row.field {
 			background-color: #000000;
 			background-color: rgba(0,0,0,0.1);
         }
-.config-form {
-    max-width: 100%;
-}
-
-.config-form > .row {
-    padding: 19px;
-    margin-bottom: 20px;
-    background-color: #f5f5f5;
-    border: 1px solid #e3e3e3;
-    border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
-    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
-}
-
-div.config-form .row.field {
-    padding-top:1.5em;
-}
-
-    div.config-form > .row > .container:nth-of-type(odd){
-        border-right: 1px #ddd solid;
-    }
-    div.config-form.design > .row > .container:nth-of-type(odd){
-        border-right: none;
-    }
-
-        div.config-form .row > .field-input {
-            padding-left:0.1em;
-        }
-            div.config-form .row > .field-input label {
-                padding-left:1.3em;
-                display: block;
-            }
-
-
-/* Styles for form admin view (/forms/:formID/admin) */
-.admin-form > .page-header {
-    padding-bottom: 0;
-    margin-bottom: 40px;
-}
-    .admin-form > .page-header h1 {
-        margin-bottom: 0;
-        margin-top: 0;
-    }
-    .admin-form > .page-header > .col-xs-3 {
-        padding-top: 1.4em;
-    }
-.admin-form .form-controls .row {
-    padding: 5px;
-}
-.admin-form .page-header {
-    border: none;
-	margin-top: none;
-	margin-bottom: none;
-}
-
-/*Styles for admin view tabs */
-.admin-form .tab-content {
-    padding-top: 3em;
-}
-
-.admin-form .panel-heading {
-    background-color: #f1f1f1;
-	position: relative!important;
-}
-    .admin-form .panel-heading:hover {
-        background-color: #fff;
-        cursor: pointer;
-    }
-        .admin-form .panel-heading a:hover {
-            text-decoration: none;
-        }
 
 .current-fields .panel-body .row.question input[type='text'], .current-fields .panel-body .row.description textarea{
     width: 100%;
@@ -360,75 +240,6 @@ div.config-form .row.field {
 .ui-select-toggle {
 	box-shadow:none!important;
 	border:none!important;
-}
-
-.current-fields .tool-panel > .panel-default:hover {
-    border-color: #9d9d9d;
-    cursor: pointer;
-}
-
-.current-fields .tool-panel > .panel-default .panel-heading {
-    background-color: #fff;
-    color: #9d9d9d!important;
-}
-    .current-fields .tool-panel > .panel-default .panel-heading:hover {
-        background-color: #eee;
-        color: #000!important;
-        cursor: pointer;
-    }     
-.current-fields .tool-panel > .panel-default .panel-heading a {
-    color: inherit;
-}
-.current-fields .tool-panel > .panel-default .panel-heading a:hover{
-    text-decoration: none;
-}
-
-/*Styles for submission table*/
-.submissions-table .table-outer.row {
-    margin: 1.5em 0 2em 0!important;
-}
-.submissions-table .table-outer .col-xs-12 {
-    padding-left: 0!important;
-    border:1px solid #ddd;
-    overflow-x: scroll; 
-    border-radius:3px;
-}
-.submissions-table .table > thead > tr > th {
-    min-width:8em;
-}
-.submissions-table .table > tbody > tr.selected {
-    background-color:#efefef;
-}
-
-
-/*Styles for add fields tab*/
-.admin-form .add-field {
-    background-color: #ddd;
-    padding: 0 2% 0 2%;
-    border-radius: 3px;
-}
-    .admin-form .add-field .col-xs-6 {
-        padding: 0.25em 0.4em;
-    }
-        .admin-form .add-field .col-xs-6 .panel-heading {
-            border-width: 1px;
-            border-style: solid;
-            border-color: #bbb;
-            border-radius: 4px;
-        }
-
-        .admin-form .oscar-field-select {
-            margin: 10px 0 10px;
-        }
-
-.view-form-btn.span {
-    padding-right:0.6em;
-}
-.status-light.status-light-off {
-    color: #BE0000;
-}
-.status-light.status-light-on {
-    color: #33CC00;
 }
 
 /* Styles for form list view (/forms) */
